# treasury_reapers

./: .gitignore  AGENTS.md  README.md  arena.yaml  cli.tar  hermes_agent.md  pyproject.toml
corpus/: index.txt  treasury_bulletin_1953_01.txt
notebooks/: pipeline_single_instance.ipynb
skills/arithmetic-verifier/: SKILL.md
skills/bulletin-retriever/: SKILL.md
skills/cross-doc-aggregator/: SKILL.md
skills/plaintext-table-parser/: SKILL.md
